--- a/GymHuset/GymHuset/Web.config
+++ b/GymHuset/GymHuset/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,10 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GymHuset-20140303163652;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GymHuset-20140303163652.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="GymHusetDBConnectionString" connectionString="Data Source=CHRISTIAN-PC\SQLEXPRESS;Initial Catalog=GymHusetDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GymHuset-20140303163652;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GymHuset-20140303163652.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
