--- a/GymHuset/GymHuset/GymHuset.csproj
+++ b/GymHuset/GymHuset/GymHuset.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Information\Evenemang.cshtml" />
     <Content Include="Views\Produkter\TestCSS.cshtml" />
     <Content Include="Views\Admin\AdderaProdukt.cshtml" />
+    <Content Include="Views\Admin\TaBortProdukt.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
