--- a/GymHuset/GymHuset/GymHuset.csproj
+++ b/GymHuset/GymHuset/GymHuset.csproj
@@ -128,7 +128,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\InformationController.cs" />
+    <Compile Include="Controllers\LayoutController.cs" />
     <Compile Include="Controllers\ProdukterController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -239,11 +241,11 @@
     <Content Include="Views\Information\Kontakt.cshtml" />
     <Content Include="Views\Information\FAQ.cshtml" />
     <Content Include="Views\Information\Evenemang.cshtml" />
-    <Content Include="Views\Produkter\TestCSS.cshtml" />
     <Content Include="Views\Admin\AdderaProdukt.cshtml" />
     <Content Include="Views\Admin\TaBortProdukt.cshtml" />
     <Content Include="Views\Produkter\ProduktInfo.cshtml" />
     <Content Include="Views\Admin\AdminSidan.cshtml" />
+    <Content Include="Views\Shared\_PopProductsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
